--- a/cv.html
+++ b/cv.html
@@ -7,7 +7,7 @@
   <body style="background-color:gray ;">
     <h1 style="text-align: center;">Ankit Khandelwal's CV</h1>
     <iframe 
-        src="Untitled1.PDF" 
+        src="./Untitled1.PDF" 
         frameBorder="0"
         scrolling="auto"
         width="100%" 
