--- a/cv.html
+++ b/cv.html
@@ -7,7 +7,7 @@
   <body style="background-color:gray ;">
     <h1 style="text-align: center;">Ankit Khandelwal's CV</h1>
     <iframe 
-        src="Untitled1.pdf" 
+        src="https://drive.google.com/file/d/16J6CmywI14bUQJZ8EdxL-33kj3JyFX-6/view?usp=sharing" 
         frameBorder="0"
         scrolling="auto"
         width="100%" 
