--- a/cv.html
+++ b/cv.html
@@ -6,12 +6,7 @@
   </head>
   <body style="background-color:gray ;">
     <h1 style="text-align: center;">Ankit Khandelwal's CV</h1>
-    <iframe 
-        src="https://ankit-99.github.io/CV/Untitled1.pdf" 
-        frameBorder="0"
-        scrolling="auto"
-        width="100%" 
-        height="800px">
+    <iframe src="https://docs.google.com/gview?url=https://github.com/ankit-99/CV/blob/master/Untitled1.pdf &embedded=true" style="width:100%; height:100%;" frameborder="0">
     </iframe>
   </body>
 </html>
