--- a/cv.html
+++ b/cv.html
@@ -6,7 +6,8 @@
   </head>
   <body style="background-color:gray ;">
     <h1 style="text-align: center;">Ankit Khandelwal's CV</h1>
-    <iframe src="https://docs.google.com/gview?url=https://github.com/ankit-99/CV/blob/master/Untitled1.pdf &embedded=true" style="width:100%; height:100%;" frameborder="0">
+    <iframe src="https://docs.google.com/gview?url=https://github.com/ankit-99/CV/blob/master/Untitled1.pdf&embedded=true" 
+            style="width:100%; height:800px;" frameborder="0">
     </iframe>
   </body>
 </html>
