--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
   <title>Ankit's Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url=https://github.com/ankit-99/CV/blob/master/Untitled1.pdf&embedded=true" 
-    style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe 
+        src="./Untitled1.PDF" 
+        frameBorder="0"
+        scrolling="auto"
+        width="100%" 
+        height="800px">
+    </iframe>
   </body>
 </html>
