--- a/cv.html
+++ b/cv.html
@@ -6,8 +6,12 @@
   </head>
   <body style="background-color:gray ;">
     <h1 style="text-align: center;">Ankit Khandelwal's CV</h1>
-    <iframe src="https://docs.google.com/gview?url=https://github.com/ankit-99/CV/blob/master/Untitled1.pdf&embedded=true" 
-            style="width:100%; height:800px;" frameborder="0">
+<iframe 
+        src="./Untitled1.PDF" 
+        frameBorder="0"
+        scrolling="auto"
+        width="100%" 
+        height="800px">
     </iframe>
   </body>
 </html>
