--- a/cv.html
+++ b/cv.html
@@ -7,7 +7,7 @@
   <body style="background-color:gray ;">
     <h1 style="text-align: center;">Ankit Khandelwal's CV</h1>
 <iframe 
-        src="https://ankit-99.github.io/CV/Untitled1.PDF" 
+        src="https://docs.google.com/gview?url=https://ankit-99.github.io/CV/Untitled1.PDF" 
         frameBorder="0"
         scrolling="auto"
         width="100%" 
