--- a/index.html
+++ b/index.html
@@ -5,12 +5,6 @@
   <title>Ankit's Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe 
-        src="./Untitled1.PDF" 
-        frameBorder="0"
-        scrolling="auto"
-        width="100%" 
-        height="800px">
-    </iframe>
+    <embed src="./Untitled1.pdf" width="100%" height="720px" />
   </body>
 </html>
