--- a/cv1.html
+++ b/cv1.html
@@ -6,6 +6,6 @@
   </head>
   <body style="background-color:gray ;">
     <h1 style="text-align: center;">Ankit Khandelwal's CV</h1>
-    <embed src="./Untitled1.pdf" width="100%" height="720px" />
+    <embed src="./Ankit_CV.pdf" width="100%" height="720px" />
   </body>
 </html>
